@@ -28,7 +28,7 @@ repos:
         types: [python]
         pass_filenames: false
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -43,18 +43,18 @@ repos:
       - id: pretty-format-json
       - id: fix-encoding-pragma
   - repo: https://github.com/asottile/reorder_python_imports
-    rev: v2.6.0
+    rev: v3.9.0
     hooks:
       - id: reorder-python-imports
   - repo: https://github.com/ambv/black
-    rev: 21.7b0
+    rev: 22.12.0
     hooks:
       - id: black
-        language_version: python3.8
+        language_version: python3.10
         exclude: docs, tests
         args: [--line-length=79]
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.9.2
+  - repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
     hooks:
       - id: flake8
         exclude: docs
